# data-query-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: _recall_base.py  add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: query_router.py
app/api/schemas/: error_schema.py  query_schema.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py
app/core/: constants.py  context.py  exceptions.py  log.py  retry.py
app/prompt/: prompt_loader.py
app/repositories/es/: value_es_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/mysql/meta/mappers/: column_info_mapper.py  column_metric_mapper.py  metric_info_mapper.py  table_info_mapper.py
app/repositories/qdrant/: _base_qdrant_repository.py  column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.powershell  meta_knowledge_service.py  query_service.py
conf/: app_config.yaml
docker/: .env  docker-compose.yaml
frontend/: index.html  package.json
scripts/: download_model.py
